# info-map-notes-service

./: Cargo.toml  README.md  dockerfile
.github/workflows/: pipeline.yml
migrations/2021-10-07-195051_note/: up.sql
src/: auth.rs  discovery.rs  handlers.rs  main.rs
