[package]
name = "notes-service"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "*"
# TODO: use actix-web-httpauth latest version: https://github.com/actix/actix-extras/tree/master/actix-web-httpauth
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" } 
chrono = { version = "*", features = ["serde"] }
derive_more = "*"
diesel = { version = "*", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "*"
futures = "*"
r2d2 = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
actix-service = "*"
alcoholic_jwt = "*"
# TODO: use reqwests latest version is 0.11.5
reqwest = "0.9.24"
actix-rt = "*"
